# actions-repo-file-sync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  action.yaml  action.yml  aqua.yaml  entrypoint.sh  example-regex-envs.yaml  main.py  package-lock.json  package.json  pyproject.toml  test-action.sh  test-regex.md  tsconfig.json
.github/: repo-file-sync.envs.yaml  repo-file-sync.yaml
.github/workflows/: example-sync.yml
src/: __init__.py  cli.py  config.py  config.ts  github.py  index.ts  sync.py
src/types/: config.d.ts
synced-files/: README.md  test-regex.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_github.py  test_integration.py
tests/fixtures/: test-config.yaml  test-envs.yaml
