[project]
name = "actions-repo-file-sync"
version = "2.0.0"
description = "Tool to synchronize files from GitHub repositories based on YAML configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
