[project]
name = "actions-repo-file-sync"
version = "2.0.0"
description = "Tool to synchronize files from GitHub repositories based on YAML configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
]
[tool.ruff]
line-length = 88